[package]
name = "javelot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
tracing-subscriber = "0.3.19"
axum = { version = "0.8.4", features = ["macros"] }
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
webdav-meta = { version = "0.1.0", features = ["headers", "methods", "xml"] }
headers = "0.4.0"
reqwest = { version = "0.12.15", features = ["json", "stream", "rustls-tls"], default-features = false }
torrent-name-parser = "0.12.1"
urlencoding = "2.1.3"
assert_unordered = "0.3.5"
tracing = "0.1.41"
clap = { version = "4.5.38", features = ["derive", "env"] }
rustls = "0.23.27"
moka = { version = "0.12.10", features = ["future"] }
time = "0.3.41"